add data ingetion pipline

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -9,37 +9,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'src'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m get_ipython().run_line_magic(\u001b[33m'\u001b[39m\u001b[33mload_ext\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mautoreload\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      5\u001b[39m get_ipython().run_line_magic(\u001b[33m'\u001b[39m\u001b[33mautoreload\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33m2\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mconfig\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m settings\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'src'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import requests\n",
-    "import pandas as pd \n",
-    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from src.utils.config import settings\n"
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "src_dir = os.path.abspath(os.path.join('..', 'src'))\n",
+    "sys.path.append(src_dir)\n",
+    "\n",
+    "import requests\n",
+    "import pandas as pd \n",
+    "\n",
+    "from utils.config import settings\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Meta Data', 'Time Series (5min)'])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read Data\n",
+    "data = requests.get(settings.URL)\n",
+    "data.json().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1. Information': 'Intraday (5min) open, high, low, close prices and volume',\n",
+       " '2. Symbol': 'IBM',\n",
+       " '3. Last Refreshed': '2025-03-12 19:55:00',\n",
+       " '4. Interval': '5min',\n",
+       " '5. Output Size': 'Full size',\n",
+       " '6. Time Zone': 'US/Eastern'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = data.json()\n",
+    "data['Meta Data']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3652"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data['Time Series (5min)'])"
    ]
   },
   {
